--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -856,7 +856,9 @@
 
       "import_schedule":"Import Schedule",
       "from_csv_file":"From CSV File",
-      "from_another_policy":"From another policy"
+      "from_another_policy":"From another policy",
+      "export_template":"Export template",
+      "upload_template":"Upload template"
     }
   },
   "lms": {
