VQ-2068:Ability to Compute Premium

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -858,7 +858,8 @@
       "from_csv_file":"From CSV File",
       "from_another_policy":"From another policy",
       "export_template":"Export template",
-      "upload_template":"Upload template"
+      "upload_template":"Upload template",
+      "underwriting_policy_summary":"Underwriting:Policy Summary"
     }
   },
   "lms": {
