--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -207,7 +207,20 @@
     "subject": "主题",
     "template_content": "模板内容",
     "define_template": "定义模板",
-    "save_details": "保存详细信息"
+    "save_details": "保存详细信息",
+    "system_roles": "系统角色",
+    "select_role": "选择角色",
+    "email": "电子邮件",
+    "sms": "短信",
+    "define_role": "定义角色",
+    "role_name": "角色名称",
+    "created_date": "创建日期",
+    "authorize": "授权",
+    "inactive": "未激活",
+    "confirm_delete": "确认删除",
+    "are_you_sure": "你确定吗?",
+    "cancel": "取消",
+    "delete": "删除"
   },
   "entities": {
     "account_number": "帐号",
