unit tests and multilingual updates

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1093,6 +1093,58 @@
       "level": "级别",
       "roleName": "角色名称",
       "authorizeDate": "授权日期"
+    },
+    "eTims": {
+      "refNo": "参考编号",
+      "amountPosted": "发布金额",
+      "datePosted": "发布日期",
+      "timePosted": "发布时间",
+      "etimsStatus": "Etims状态",
+      "taxableAmountA": "应税金额A",
+      "taxableAmountB": "应税金额B",
+      "taxableAmountC": "应税金额C",
+      "taxableAmountD": "应税金额D",
+      "taxAmountA": "税额A",
+      "taxAmountB": "税额B",
+      "taxAmountC": "税额C",
+      "taxAmountD": "税额D",
+      "taxRateA": "税率A",
+      "taxRateB": "税率B",
+      "taxRateC": "税率C",
+      "taxRateD": "税率D",
+      "errorMessage": "错误信息",
+      "postToEtims": "发布到Etims",
+      "debitNote": "借项通知单"
     }
+  },
+  "fms": {
+    "org": "组织",
+    "branch": "分支机构",
+    "yr": "年份",
+    "period": "期间",
+    "chequeAuth": "支票授权",
+    "bankAC": "银行账户",
+    "paymentType": "支付类型",
+    "dateFrom": "起始日期",
+    "dateTo": "结束日期",
+    "refNo": "参考编号",
+    "date": "日期",
+    "reqDate": "申请日期",
+    "type": "类型",
+    "narrative": "叙述",
+    "chequeNo": "支票号",
+    "amt": "金额",
+    "eligibleAuth": "合格的授权者",
+    "signedBy": "签署人",
+    "transDetails": "交易详情",
+    "docs": "文件",
+    "bank": "银行",
+    "acNo": "账户号码",
+    "status": "状态",
+    "remarks": "备注",
+    "genOtp": "生成OTP",
+    "signSelect": "签署选择",
+    "correction": "发送以更正",
+    "reject": "拒绝"
   }
 }
