--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1092,6 +1092,58 @@
       "level": "Ebene",
       "roleName": "Rollenname",
       "authorizeDate": "Autorisierungsdatum"
+    },
+    "eTims": {
+      "refNo": "Ref-Nr.",
+      "amountPosted": "Gebuchter Betrag",
+      "datePosted": "Buchungsdatum",
+      "timePosted": "Buchungszeit",
+      "etimsStatus": "Etims-Status",
+      "taxableAmountA": "Steuerpflichtiger Betrag A",
+      "taxableAmountB": "Steuerpflichtiger Betrag B",
+      "taxableAmountC": "Steuerpflichtiger Betrag C",
+      "taxableAmountD": "Steuerpflichtiger Betrag D",
+      "taxAmountA": "Steuerbetrag A",
+      "taxAmountB": "Steuerbetrag B",
+      "taxAmountC": "Steuerbetrag C",
+      "taxAmountD": "Steuerbetrag D",
+      "taxRateA": "Steuersatz A",
+      "taxRateB": "Steuersatz B",
+      "taxRateC": "Steuersatz C",
+      "taxRateD": "Steuersatz D",
+      "errorMessage": "Fehlermeldung",
+      "postToEtims": "In Etims buchen",
+      "debitNote": "Lastschrift"
     }
+  },
+  "fms": {
+    "org": "Organisation",
+    "branch": "Zweigstelle",
+    "yr": "Jahr",
+    "period": "Zeitraum",
+    "chequeAuth": "Scheckautorisierung",
+    "bankAC": "Bankkonto",
+    "paymentType": "Zahlungsart",
+    "dateFrom": "Datum von",
+    "dateTo": "Datum bis",
+    "refNo": "Ref-Nr.",
+    "date": "Datum",
+    "reqDate": "Anforderungsdatum",
+    "type": "Typ",
+    "narrative": "Beschreibung",
+    "chequeNo": "Schecknummer",
+    "amt": "Betrag",
+    "eligibleAuth": "Berechtigte Unterzeichner",
+    "signedBy": "Unterzeichnet von",
+    "transDetails": "Transaktionsdetails",
+    "docs": "Dokumente",
+    "bank": "Bank",
+    "acNo": "Kontonummer",
+    "status": "Status",
+    "remarks": "Bemerkungen",
+    "genOtp": "OTP generieren",
+    "signSelect": "Auswahl unterschreiben",
+    "correction": "Zur Korrektur senden",
+    "reject": "Ablehnen"
   }
 }
