--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1101,6 +1101,58 @@
       "level": "Level",
       "roleName": "Role name",
       "authorizeDate": "Authorize date"
+    },
+    "eTims": {
+      "refNo":  "Ref no",
+      "amountPosted": "Amount posted",
+      "datePosted":  "Date posted",
+      "timePosted": "Time posted",
+      "etimsStatus":  "Etims status",
+      "taxableAmountA": "Taxable amount A",
+      "taxableAmountB":  "Taxable amount B",
+      "taxableAmountC": "Taxable amount C",
+      "taxableAmountD":  "Taxable amount D",
+      "taxAmountA": "Tax amount A",
+      "taxAmountB": "Tax amount B",
+      "taxAmountC":"Tax amount C",
+      "taxAmountD": "Tax amount D",
+      "taxRateA":"Tax rate A",
+      "taxRateB": "Tax rate B",
+      "taxRateC":"Tax rate C",
+      "taxRateD": "Tax rate D",
+      "errorMessage":"Error message",
+      "postToEtims": "Post to Etims",
+      "debitNote": "Debit note"
     }
+  },
+  "fms": {
+    "org": "Organization",
+    "branch": "Branch",
+    "yr": "Year",
+    "period": "Period",
+    "chequeAuth": "Cheque authorization",
+    "bankAC": "Bank account",
+    "paymentType": "Payment type",
+    "dateFrom": "Date from",
+    "dateTo": "Date to",
+    "refNo": "Ref No",
+    "date": "Date",
+    "reqDate": "Request date",
+    "type": "Type",
+    "narrative": "Narrative",
+    "chequeNo": "Cheque number",
+    "amt": "Amount",
+    "eligibleAuth": "Eligible authorizers",
+    "signedBy": "Signed by",
+    "transDetails": "Transaction details",
+    "docs": "Documents",
+    "bank": "Bank",
+    "acNo": "Account Number",
+    "status": "Status",
+    "remarks": "Remarks",
+    "genOtp": "Generate OTP",
+    "signSelect": "Sign selected",
+    "correction": "Send for correction",
+    "reject": "Reject"
   }
 }
