--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1092,6 +1092,58 @@
       "level": "Nivel",
       "roleName": "Nombre del rol",
       "authorizeDate": "Fecha de autorización"
+    },
+    "eTims": {
+      "refNo": "N° de Ref.",
+      "amountPosted": "Monto Publicado",
+      "datePosted": "Fecha Publicada",
+      "timePosted": "Hora Publicada",
+      "etimsStatus": "Estado de Etims",
+      "taxableAmountA": "Monto Imponible A",
+      "taxableAmountB": "Monto Imponible B",
+      "taxableAmountC": "Monto Imponible C",
+      "taxableAmountD": "Monto Imponible D",
+      "taxAmountA": "Monto de Impuesto A",
+      "taxAmountB": "Monto de Impuesto B",
+      "taxAmountC": "Monto de Impuesto C",
+      "taxAmountD": "Monto de Impuesto D",
+      "taxRateA": "Tasa de Impuesto A",
+      "taxRateB": "Tasa de Impuesto B",
+      "taxRateC": "Tasa de Impuesto C",
+      "taxRateD": "Tasa de Impuesto D",
+      "errorMessage": "Mensaje de Error",
+      "postToEtims": "Publicar en Etims",
+      "debitNote": "Nota de Débito"
     }
+  },
+  "fms": {
+    "org": "Organización",
+    "branch": "Sucursal",
+    "yr": "Año",
+    "period": "Período",
+    "chequeAuth": "Autorización de Cheque",
+    "bankAC": "Cuenta Bancaria",
+    "paymentType": "Tipo de Pago",
+    "dateFrom": "Fecha desde",
+    "dateTo": "Fecha hasta",
+    "refNo": "N° de Ref.",
+    "date": "Fecha",
+    "reqDate": "Fecha de Solicitud",
+    "type": "Tipo",
+    "narrative": "Narrativa",
+    "chequeNo": "Número de Cheque",
+    "amt": "Monto",
+    "eligibleAuth": "Autorizadores Elegibles",
+    "signedBy": "Firmado por",
+    "transDetails": "Detalles de la Transacción",
+    "docs": "Documentos",
+    "bank": "Banco",
+    "acNo": "Número de Cuenta",
+    "status": "Estado",
+    "remarks": "Comentarios",
+    "genOtp": "Generar OTP",
+    "signSelect": "Firmar selección",
+    "correction": "Enviar para corrección",
+    "reject": "Rechazar"
   }
 }
