--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1095,6 +1095,58 @@
       "level": "Niveau",
       "roleName": "Nom du rôle",
       "authorizeDate": "Date d'autorisation"
+    },
+    "eTims": {
+      "refNo": "N° de Réf.",
+      "amountPosted": "Montant Affiché",
+      "datePosted": "Date Affichée",
+      "timePosted": "Heure Affichée",
+      "etimsStatus": "Statut Etims",
+      "taxableAmountA": "Montant Imposable A",
+      "taxableAmountB": "Montant Imposable B",
+      "taxableAmountC": "Montant Imposable C",
+      "taxableAmountD": "Montant Imposable D",
+      "taxAmountA": "Montant de la Taxe A",
+      "taxAmountB": "Montant de la Taxe B",
+      "taxAmountC": "Montant de la Taxe C",
+      "taxAmountD": "Montant de la Taxe D",
+      "taxRateA": "Taux de Taxe A",
+      "taxRateB": "Taux de Taxe B",
+      "taxRateC": "Taux de Taxe C",
+      "taxRateD": "Taux de Taxe D",
+      "errorMessage": "Message d'Erreur",
+      "postToEtims": "Publier sur Etims",
+      "debitNote": "Note de Débit"
     }
+  },
+  "fms": {
+    "org": "Organisation",
+    "branch": "Branche",
+    "yr": "Année",
+    "period": "Période",
+    "chequeAuth": "Autorisation de Chèque",
+    "bankAC": "Compte Bancaire",
+    "paymentType": "Type de Paiement",
+    "dateFrom": "Date de",
+    "dateTo": "Date à",
+    "refNo": "N° de Réf.",
+    "date": "Date",
+    "reqDate": "Date de Demande",
+    "type": "Type",
+    "narrative": "Narratif",
+    "chequeNo": "Numéro de Chèque",
+    "amt": "Montant",
+    "eligibleAuth": "Autorisateurs Éligibles",
+    "signedBy": "Signé par",
+    "transDetails": "Détails de la Transaction",
+    "docs": "Documents",
+    "bank": "Banque",
+    "acNo": "Numéro de Compte",
+    "status": "Statut",
+    "remarks": "Remarques",
+    "genOtp": "Générer OTP",
+    "signSelect": "Signer la sélection",
+    "correction": "Envoyer pour correction",
+    "reject": "Rejeter"
   }
 }
