--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1095,6 +1095,58 @@
       "level": "Kiunga",
       "roleName": "Jina la jukumu",
       "authorizeDate": "Tarehe ya kuidhinisha"
+    },
+    "eTims": {
+      "refNo": "Nambari ya Rejea",
+      "amountPosted": "Kiasi kilichotumwa",
+      "datePosted": "Tarehe ya kutumwa",
+      "timePosted": "Wakati uliotumwa",
+      "etimsStatus": "Hali ya Etims",
+      "taxableAmountA": "Kiasi kinachotozwa kodi A",
+      "taxableAmountB": "Kiasi kinachotozwa kodi B",
+      "taxableAmountC": "Kiasi kinachotozwa kodi C",
+      "taxableAmountD": "Kiasi kinachotozwa kodi D",
+      "taxAmountA": "Kiasi cha Kodi A",
+      "taxAmountB": "Kiasi cha Kodi B",
+      "taxAmountC": "Kiasi cha Kodi C",
+      "taxAmountD": "Kiasi cha Kodi D",
+      "taxRateA": "Kiwango cha Kodi A",
+      "taxRateB": "Kiwango cha Kodi B",
+      "taxRateC": "Kiwango cha Kodi C",
+      "taxRateD": "Kiwango cha Kodi D",
+      "errorMessage": "Ujumbe wa Kosa",
+      "postToEtims": "Tuma kwa Etims",
+      "debitNote": "Nakala ya Deni"
     }
+  },
+  "fms": {
+    "org": "Shirika",
+    "branch": "Tawi",
+    "yr": "Mwaka",
+    "period": "Kipindi",
+    "chequeAuth": "Idhini ya Hundi",
+    "bankAC": "Akaunti ya Benki",
+    "paymentType": "Aina ya Malipo",
+    "dateFrom": "Tarehe kutoka",
+    "dateTo": "Tarehe hadi",
+    "refNo": "Nambari ya Rejea",
+    "date": "Tarehe",
+    "reqDate": "Tarehe ya Ombi",
+    "type": "Aina",
+    "narrative": "Maelezo",
+    "chequeNo": "Nambari ya Hundi",
+    "amt": "Kiasi",
+    "eligibleAuth": "Waliostahili Kuthibitisha",
+    "signedBy": "Imesainiwa na",
+    "transDetails": "Maelezo ya Muamala",
+    "docs": "Hati",
+    "bank": "Benki",
+    "acNo": "Nambari ya Akaunti",
+    "status": "Hali",
+    "remarks": "Maoni",
+    "genOtp": "Tengeneza OTP",
+    "signSelect": "Chagua sahihi",
+    "correction": "Tuma kwa marekebisho",
+    "reject": "Kataa"
   }
 }
